force-app/main/default/objects/ConfigSetting__c/ConfigSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Phase 2 - contains fields that are referred in custom buttons, links, etc.</description>
    <label>ConfigSetting</label>
</CustomObject>