force-app/main/default/objects/ConfigSetting__c/fields/AutomatedCaseUser__c.field-meta.xml
<CustomField>
    <fullName>AutomatedCaseUser__c</fullName>
    <label>AutomatedCaseUser</label>
    <length>50</length>
    <type>Text</type>
</CustomField>