force-app/main/default/objects/ConfigSetting__c/fields/Holding_UserID__c.field-meta.xml
<CustomField>
    <fullName>Holding_UserID__c</fullName>
    <description>Phase 2 - to capture the holding user.</description>
    <label>HoldingUserID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>