force-app/main/default/objects/ConfigSetting__c/fields/OpportunityNameID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNameID__c</fullName>
    <label>OpportunityNameID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>