force-app/main/default/objects/ConfigSetting__c/fields/SegmentationChangeOrgObjectID__c.field-meta.xml
<CustomField>
    <fullName>SegmentationChangeOrgObjectID__c</fullName>
    <description>The 3 digit object id(aoq in dev)</description>
    <label>SegmentationChangeOrgObjectID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>